--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
       - uses: ./
         with:
           milliseconds: 1000
-          agent_url: https://example.com/api
+          agent_url: ${{secrets.AGENT_URL}}
