--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,12 @@ inputs:
     required: true
     description: 'input description here'
     default: 'default value if applicable'
+  agent_url:
+    required: true
+  agent_token:
+    required: true
+  bot_alias:
+    required: true
 runs:
   using: 'node12'
   main: 'dist/index.js'
