--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6"
+    "@actions/core": "^1.2.6",
+    "@actions/github": "^4.0.0",
+    "@veramo/core": "^1.0.1",
+    "@veramo/credential-w3c": "^1.0.1",
+    "@veramo/remote-client": "^1.0.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -35,6 +39,7 @@
     "eslint": "^7.13.0",
     "eslint-plugin-github": "^4.1.1",
     "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "jest": "^24.9.0",
     "jest-circus": "^26.4.2",
     "js-yaml": "^3.14.0",
