--- a/.github/workflows/record.yml
+++ b/.github/workflows/record.yml
@@ -1,10 +1,6 @@
 name: 'record'
 
-on:
-  issues:
-    types: [opened, edited, milestoned]
-  issue_comment:
-    types: [created, deleted]
+on: [issues, issue_comment]
 
 jobs:
   record: # make sure the action works on a clean machine without building
